--- a/src/co/uk/taurasystems/application/ui/WindowPane.fxml
+++ b/src/co/uk/taurasystems/application/ui/WindowPane.fxml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -7,23 +10,64 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="304.0" prefWidth="447.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="403.0" prefWidth="556.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.uk.taurasystems.application.ui.WindowPaneController">
    <children>
       <GridPane layoutX="8.0" layoutY="40.0" prefHeight="271.0" prefWidth="484.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="219.0" minWidth="4.0" prefWidth="14.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="443.0" minWidth="10.0" prefWidth="70.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="443.0" minWidth="10.0" prefWidth="364.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="443.0" minWidth="10.0" prefWidth="120.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="443.0" minWidth="10.0" prefWidth="313.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="443.0" minWidth="10.0" prefWidth="28.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints maxHeight="96.0" minHeight="0.0" prefHeight="8.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="255.0" minHeight="10.0" prefHeight="16.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="282.0" minHeight="10.0" prefHeight="279.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="-Infinity" minHeight="8.0" prefHeight="8.0" vgrow="SOMETIMES" />
+          <RowConstraints vgrow="SOMETIMES" />
+          <RowConstraints vgrow="NEVER" />
+            <RowConstraints vgrow="SOMETIMES" />
+            <RowConstraints vgrow="SOMETIMES" />
+            <RowConstraints vgrow="SOMETIMES" />
+            <RowConstraints vgrow="SOMETIMES" />
+            <RowConstraints vgrow="SOMETIMES" />
+            <RowConstraints vgrow="SOMETIMES" />
+            <RowConstraints vgrow="SOMETIMES" />
+            <RowConstraints vgrow="SOMETIMES" />
+            <RowConstraints vgrow="SOMETIMES" />
+            <RowConstraints vgrow="SOMETIMES" />
+            <RowConstraints vgrow="SOMETIMES" />
+            <RowConstraints vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="-Infinity" minHeight="8.0" prefHeight="8.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label fx:id="refLabel" text="Ref #:" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <Label text="Ref #:" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+            <TextField fx:id="refTextField" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <Label text="Date:" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+            <Label text="Title: (Mr/Mrs/Miss)" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
+            <TextField fx:id="titleTextField" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+            <Label text="Patient Full Name:" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
+            <TextField fx:id="patientFullNameTextField" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+            <Label text="Address Line 1:" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="7" />
+            <TextField fx:id="addressLine1TextField" GridPane.columnIndex="2" GridPane.rowIndex="7" />
+            <Label text="Address Line 2:" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="8" />
+            <TextField fx:id="addressLine2TextField" GridPane.columnIndex="2" GridPane.rowIndex="8" />
+            <Label text="Address Line 3:" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="9" />
+            <TextField fx:id="addressLine3TextField" GridPane.columnIndex="2" GridPane.rowIndex="9" />
+            <Label text="Address Line 4:" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="10" />
+            <TextField fx:id="addressLine4TextField" GridPane.columnIndex="2" GridPane.rowIndex="10" />
+            <Label text="Post Code" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="11" />
+            <TextField fx:id="postCodeTextField" GridPane.columnIndex="2" GridPane.rowIndex="11" />
+            <Label text="Patient Abbr. Name:" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="6" />
+            <TextField fx:id="patientAbbrNameTextField" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+            <Label text="Appointment Date:" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="12" />
+            <Label text="Appointment Time:" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="13" />
+            <TextField fx:id="appointmentTimeTextField" GridPane.columnIndex="2" GridPane.rowIndex="13" />
+            <DatePicker fx:id="letterDatePicker" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <DatePicker fx:id="appointmentDatePicker" GridPane.columnIndex="2" GridPane.rowIndex="12" />
+            <ButtonBar GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="14">
+              <buttons>
+                <Button fx:id="okButton" mnemonicParsing="false" text="OK" />
+                  <Button fx:id="cancelButton" mnemonicParsing="false" text="Cancel" />
+              </buttons>
+            </ButtonBar>
          </children>
       </GridPane>
    </children>
