--- a/src/co/uk/taurasystems/application/ui/panes/LetterPane.fxml
+++ b/src/co/uk/taurasystems/application/ui/panes/LetterPane.fxml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -11,18 +9,19 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="403.0" prefWidth="556.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.uk.taurasystems.application.ui.panes.LetterPaneController">
+
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="399.0" prefWidth="637.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.uk.taurasystems.application.ui.panes.LetterPaneController">
    <children>
-      <GridPane prefHeight="399.0" prefWidth="553.0">
+      <GridPane prefHeight="399.0" prefWidth="637.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="219.0" minWidth="4.0" prefWidth="14.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="443.0" minWidth="10.0" prefWidth="120.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="443.0" minWidth="10.0" prefWidth="313.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="443.0" minWidth="10.0" prefWidth="28.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="4.0" prefWidth="14.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="120.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="313.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="28.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints maxHeight="-Infinity" minHeight="8.0" prefHeight="8.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints vgrow="SOMETIMES" />
           <RowConstraints vgrow="NEVER" />
             <RowConstraints vgrow="SOMETIMES" />
@@ -64,14 +63,8 @@
             <TextField fx:id="appointmentTimeTextField" GridPane.columnIndex="2" GridPane.rowIndex="14" />
             <DatePicker fx:id="letterDatePicker" GridPane.columnIndex="2" GridPane.rowIndex="4" />
             <DatePicker fx:id="appointmentDatePicker" GridPane.columnIndex="2" GridPane.rowIndex="13" />
-            <ButtonBar GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="15">
-              <buttons>
-                <Button fx:id="okButton" mnemonicParsing="false" text="OK" />
-                  <Button fx:id="cancelButton" mnemonicParsing="false" text="Cancel" />
-              </buttons>
-            </ButtonBar>
             <Label text="Letter Type" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-            <ComboBox fx:id="letterTypeComboBox" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <ComboBox fx:id="letterTypeComboBox" maxWidth="1.7976931348623157E308" prefHeight="26.0" prefWidth="271.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
          </children>
       </GridPane>
    </children>
